# sip-ai-agent

./: .bandit  .cursorrules  .editorconfig  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.web  LICENSE  Makefile  README.md  WEB_UI_README.md  WEB_UI_SUMMARY.md  cleanup-artifacts.sh  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  env.example  env.template  mypy.ini  nginx-proxy.conf  nginx.conf  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements.txt  test-web-build.sh  test_config.py
.github/workflows/: ci.yml  ci.yml.disabled  cleanup.yml  deploy-dev.yml  deploy-prod.yml  docker-deploy.yml  main.yml  release.yml  security.yml  ui-ux-quality.yml  ui-ux-quality.yml.disabled
app/: agent.py  api_routes.py  auth.py  call_history.py  config.py  config_manager.py  demo_calls.py  health.py  logging_config.py  metrics.py  monitor.py  monitor_new.py  monitor_old.py  observability.py  openai_agent.py  sip_client.py  start_web_ui.py  system_monitor.py  web_backend.py  web_backend_new.py  web_backend_old.py  websocket_handler.py
app/static/dashboard/: index.html
app/static/dashboard/assets/: index-BM7lN80A.css  index-BRf8cl9A.css  index-C2T5k3EL.js  index-C3xpAzNB.js
deploy/nginx/: default.conf
scripts/: build-image.sh  deploy.sh  install_pjsua2.py  test-all.ps1  test-all.sh  version.py
tests/: __init__.py  conftest.py  test_agent_startup.py  test_audio_pipeline.py  test_auth.py  test_config.py  test_config_manager.py  test_endpoint_timer.py  test_monitor_reload.py  test_monitor_routes.py  test_openai_agent.py  test_system_monitor.py  test_web_backend.py  test_web_backend_extended.py
web/: .eslintrc.js  .gitignore  .npmrc  .pa11yci  .pa11yci.json  .prettierrc.js  .stylelintrc.js  README.md  design-tokens.json  eslint.config.js  index.html  lighthouserc.js  package-lock.json  package.json  playwright-tsconfig.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.ts
web/.storybook/: main.ts  preview.ts
web/js/components/: admin-dashboard-old.js  admin-dashboard.js  call-history.js  common.js  configuration.js  logs-viewer.js  statistics.js
web/js/components/admin/: activity-alerts.js  charts-analytics.js  metrics-cards.js  system-health.js
web/scripts/: audit-production.js  run-vitest.mjs  setup.js  test-accessibility.js
web/src/: App.test.tsx  App.tsx  constants.ts  design-tokens.css  index.css  theme-context.ts  theme-provider.tsx  types.ts  utils.test.ts
web/src/__tests__/: dashboard-components.test.tsx
web/src/components/: ActiveCallsCard.tsx  AuthNotice.tsx  Button.stories.tsx  Button.tsx  CallHistoryTable.tsx  ConfigEditor.tsx  ErrorBanner.tsx  LoadingScreen.tsx  LogsPanel.tsx  StatusCard.stories.tsx  StatusOverview.tsx  ThemeToggle.tsx
web/src/hooks/: useDashboardData.ts  useTheme.ts
web/src/test/: setup.ts
web/src/test/components/: StatusCard.test.tsx
web/src/utils/: http.ts  time.ts
web/src/utils/__tests__/: http.test.ts
web/tests/: global-setup.ts  setup.ts
web/tests/disabled/: StatusCard.test.tsx  components.test.tsx
web/tests/e2e/: accessibility.spec.ts  admin-dashboard.spec.ts  call-history.spec.ts  configuration.spec.ts  dashboard.spec.ts  global-setup.ts  logs-viewer.spec.ts  quick-dashboard.spec.ts  statistics.spec.ts  visual-regression.spec.ts
web/tests/ui/: dashboard.spec.ts
web/tests/unit/: components.test.tsx
